package ef_poo.excepciones;

public class ClienteException extends Exception {
    public ClienteException(String mensaje) {
        super(mensaje);
    }
}
