package ef_poo.excepciones;

public class ProductoException extends Exception {
    public ProductoException(String mensaje) {
        super(mensaje);
    }
}
