package ef_poo.excepciones;

public class VentaException extends Exception {
    public VentaException(String mensaje) {
        super(mensaje);
    }
}
